dark mode, bg color, scroll bar fix

--- a/src/globals.css
+++ b/src/globals.css
@@ -5,6 +5,7 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
+  --color-secondary-text: var(--secondary-text);
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
@@ -46,7 +47,8 @@
 
 :root {
   --radius: 0.625rem;
-  --background: oklch(1 0 0);
+  --secondary-text: #55585C;
+  --background: #F9F8F6;
   --foreground: oklch(0.141 0.005 285.823);
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.141 0.005 285.823);
@@ -80,9 +82,10 @@
 }
 
 .dark {
-  --background: oklch(0.141 0.005 285.823);
+  --secondary-text: #B9BDC1;
+  --background: #1D1E20;
   --foreground: oklch(0.985 0 0);
-  --card: oklch(0.21 0.006 285.885);
+  --card: #36383A;
   --card-foreground: oklch(0.985 0 0);
   --popover: oklch(0.21 0.006 285.885);
   --popover-foreground: oklch(0.985 0 0);
@@ -117,8 +120,11 @@
   * {
     @apply border-border outline-ring/50;
   }
-  body {
+  body, html {
     @apply bg-background text-foreground;
     user-select: none;
+  }
+  html {
+    scrollbar-gutter: stable;
   }
 }
